@@ -1069,6 +1069,67 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|query
+operator|.
+name|getClauses
+argument_list|(
+name|Occur
+operator|.
+name|MUST
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
+operator|==
+literal|false
+operator|||
+name|query
+operator|.
+name|getClauses
+argument_list|(
+name|Occur
+operator|.
+name|FILTER
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
+operator|==
+literal|false
+condition|)
+block|{
+comment|// TODO: there are some cases where BooleanScorer
+comment|// would handle conjunctions faster than
+comment|// BooleanScorer2...
+return|return
+literal|null
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+name|query
+operator|.
+name|getClauses
+argument_list|(
+name|Occur
+operator|.
+name|MUST_NOT
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
+operator|==
+literal|false
+condition|)
+block|{
+comment|// TODO: there are some cases where BooleanScorer could do this faster
+return|return
+literal|null
+return|;
+block|}
 name|List
 argument_list|<
 name|BulkScorer
@@ -1109,6 +1170,24 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|c
+operator|.
+name|getOccur
+argument_list|()
+operator|!=
+name|Occur
+operator|.
+name|SHOULD
+condition|)
+block|{
+throw|throw
+operator|new
+name|AssertionError
+argument_list|()
+throw|;
+block|}
 name|BulkScorer
 name|subScorer
 init|=
@@ -1122,54 +1201,9 @@ decl_stmt|;
 if|if
 condition|(
 name|subScorer
-operator|==
+operator|!=
 literal|null
 condition|)
-block|{
-if|if
-condition|(
-name|c
-operator|.
-name|isRequired
-argument_list|()
-condition|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-elseif|else
-if|if
-condition|(
-name|c
-operator|.
-name|isRequired
-argument_list|()
-condition|)
-block|{
-comment|// TODO: there are some cases where BooleanScorer
-comment|// would handle conjunctions faster than
-comment|// BooleanScorer2...
-return|return
-literal|null
-return|;
-block|}
-elseif|else
-if|if
-condition|(
-name|c
-operator|.
-name|isProhibited
-argument_list|()
-condition|)
-block|{
-comment|// TODO: there are some cases where BooleanScorer could do this faster
-return|return
-literal|null
-return|;
-block|}
-else|else
 block|{
 name|optional
 operator|.
